--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,46 +1,65 @@
+/* CSS Root Variables */
+:root {
+    --main-font-stack: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --primary-color: #202e3c;
+    --secondary-color: #18BC9C;
+    --text-color: #FFFFFF;
+    --hover-text-color: #18BC9C;
+    --body-background-color: #fffaf0;
+    --font-size-large: 36px;
+    --font-size-medium: 20px;
+    --font-size-small: 18px;
+    --spacing-large: 20px;
+    --spacing-medium: 10px;
+    --spacing-small: 5px;
+}
+
+/* Imported Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Cantata+One&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
 /* Navbar Style */
 .navbar {
     width: 100%;
-    background-color: #202e3c; 
-    color: #FFFFFF; 
-    padding: 20px 20px; 
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    padding: var(--spacing-large);
     box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Arial', sans-serif; 
+    font-family: var(--main-font-stack);
 }
 
 .navbar a {
     text-decoration: none;
-    color: #FFFFFF; 
-    font-size: 18px; 
-    padding: 10px 15px; 
+    color: var(--text-color);
+    font-size: var(--font-size-small);
+    padding: var(--spacing-medium);
     transition: color 0.3s ease;
 }
 
 .navbar a:hover {
-    color: #18BC9C; 
+    color: var(--secondary-color);
 }
 
 .navbar-logo {
     flex: 1;
-    justify-content: flex-start; 
+    justify-content: flex-start;
 }
 
 .navbar-logo img {
-    max-height: 80px; 
+    max-height: 80px;
     max-width: 150px;
     flex-shrink: 0;
 }
 
 /* Footer Style */
 .footer {
-    background-color: #202e3c;
+    background-color: var(--primary-color);
     color: #f2f2f2;
-    padding: 20px 0;
+    padding: var(--spacing-large) 0;
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: var(--main-font-stack);
 }
 
 .footer-content {
@@ -50,80 +69,81 @@
 }
 
 .footer-links {
-    margin-bottom: 15px;
+    margin-bottom: var(--spacing-medium);
 }
 
 .footer-links a {
     color: #f2f2f2;
-    margin: 0 10px;
+    margin: 0 var(--spacing-small);
     text-decoration: none;
 }
 
 .footer-links a:hover {
-    color: #18BC9C;
-    text-decoration: none;
+    color: var(--secondary-color);
 }
 
 .footer-copyright {
-    margin-top: 10px;
+    margin-top: var(--spacing-small);
     font-size: 0.9em;
 }
 
 /* General Body and Font Styles */
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: ubuntu-regular;
     color: #333;
-    background-color: #fffaf0;
+    background-color: var(--body-background-color);
     margin: 0;
     padding: 0;
 }
 
 /* Main Content Styles */
 .main-content {
-    background-color: #fffaf0;
-    padding: 20px 100px;
-    margin: 10px auto;
+    background-color: var(--body-background-color);
+    padding: var(--spacing-large) 100px;
+    margin: var(--spacing-small) auto;
     max-width: 1000px;
     text-align: center;
 }
 
-.main-content h1, .main-content h2 {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}
-
 .main-content h1 {
     color: #444444;
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: var(--font-size-large);
+    margin-bottom: var(--spacing-small);
+    font-family: "Source Code Pro", monospace;
+    font-optical-sizing: auto;
+    font-weight: 900;
+    font-style: normal;
 }
 
 .main-content h2 {
-    color: #444444;
-    font-size: 28px;
-    margin-bottom: 15px;
+    color: #DD4040;
+    font-size: 40px;
+    font-weight: bolder;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .main-content p {
     color: #444444;
     line-height: 1.8;
-    font-size: 18px;
-    margin-bottom: 20px;
+    font-size: var(--font-size-small);
+    margin-bottom: var(--spacing-small);
 }
 
 /* Button Styles */
 .gradient-button {
     display: inline-block;
-    padding: 12px 35px;
+    padding: 12px 100px;
     font-size: 16px;
     font-weight: bold;
-    color: #000;
+    font-family: var(--main-font-stack);
+    color: #1A0505;
     text-decoration: none;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 10px;
     background: linear-gradient(90deg, #F99B8F, #E0E382 40%, #53E965 69%, #737FD0);
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
-    margin: 5px;
+    margin: var(--spacing-large);
 }
 
 .gradient-button:hover {
@@ -135,28 +155,28 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 10px;
+    margin-top: var(--spacing-small);
+    margin-bottom: var(--spacing-small);
 }
 
 /* Image Styles */
 .banner-image, .sdg-image {
-    width: 100%;
-    height: auto;
     border-radius: 8px;
-    margin-top: 20px;
+    max-width: 1000px;
+    max-height: 1000px;
 }
 
 /* Flexbox Layout for Content Section */
 .content-section {
     display: flex;
-    align-items: justify;
-    margin-top: 5px;
+    align-items: center;
     padding: 50px;
-    background-color: #fffaf0;
 }
 
 .content-section p {
-    font-size: 20px;
+    font-size: var(--font-size-medium);
+    text-align: start;
+    font-family: var(--main-font-stack);
 }
 
 .content-image {
@@ -169,13 +189,21 @@ body {
 .content-text {
     flex: 1;
     max-width: 50%;
+    margin-left: 20px;
+    text-align: start;
+}
+
+.text-and-image {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 /* Middle Line Style */
 .full-width-hr {
-    width: calc(100% + 200px); /* Adjust this value based on the padding of the parent container */
-    margin-left: -100px; /* Half of the added width to center the line */
-    border-color: #ccc; /* Optional: set the color of the hr */
+    width: calc(100% + 200px);
+    margin-left: -100px;
+    border-color: #ccc;
 }
 
 /* Responsive adjustments */
@@ -191,5 +219,15 @@ body {
 
     .content-image {
         margin-bottom: 20px;
+        max-width: 50%;
+    }
+
+    .main-content h1 {
+        font-size: 24px;
     }
 }
+
+
+
+
+
