--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -54,6 +54,7 @@ body {
     color: transparent; 
     transition: color 0.3s ease;
     font-size: 20px;
+    text-align: center;
 }
 
 .container a:hover{
