--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -41,7 +41,7 @@ body {
 }
 
 .container p {
-    font-size: 16px;
+    font-size: 14px;
     text-align: center;
     margin-top: 10px;
     color: #666;
@@ -68,7 +68,7 @@ body {
     -webkit-text-fill-color: transparent;
     color: transparent; 
     transition: color 0.3s ease;
-    text-align: ce;
+    text-align: center;
 }
 
 .form-container a:hover {
@@ -91,7 +91,7 @@ input[type="password"] {
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
-    font-size: 18px;
+    font-size: 15px;
     transition: border-color 0.3s ease;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -100,7 +100,7 @@ button[type="submit"] {
     display: inline-block;
     width: 100%;
     padding: 12px 100px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
     font-family: var(--main-font-stack);
     text-decoration: none;
@@ -128,7 +128,7 @@ button[type="submit"]:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
     outline: none;
-    font-size: 17px;
+    font-size: 15px;
     transition: border-color 0.3s ease;
     cursor: pointer;
     
@@ -143,7 +143,7 @@ button[type="submit"]:hover {
     border: 1px solid #ccc;
     border-radius: 5px;
     outline: none;
-    font-size: 17px;
+    font-size: 15px;
     cursor: pointer;
 }
 @media (max-width: 480px) {
@@ -161,7 +161,7 @@ transition: background-color 0.3s ease; /* Add transition for smooth hover effec
 
 /* size of labels inside the modal*/
 label {
-    font-size: 17px;
+    font-size: 15px;
     margin-bottom: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
