updated profile.php and about us.php

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -16,8 +16,9 @@ body, html {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center
 }
+
 .form-container {
     display: flex;
     flex-direction: column;
@@ -25,6 +26,7 @@ body, html {
     justify-content: center;
     padding: 20px;
     box-sizing: border-box;
+    margin-top: 30px;
 }
 
 form {
