--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,8 +1,8 @@
 .profile-container {
     max-width: 800px;
-    margin: 20px auto;
+    margin: var(--spacing-large) auto;
     background-color: #ffffff;
-    padding: 20px;
+    padding: var(--spacing-large);
     border-radius: 8px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
 }
@@ -10,13 +10,14 @@
 .profile-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    margin-bottom: 20px;
+    justify-content: center;
+    margin-bottom: var(--spacing-medium);
 }
 
 .profile-info {
     flex-grow: 1;
-    text-align: left;
+    text-align: center;
+    margin-left: -150px;
 }
 
 .profile-picture {
@@ -29,7 +30,8 @@
 
 .profile-details h3 {
     color: #444;
-    margin-top: 20px;
+    margin-top: var(--spacing-medium);
+    font-size: var(--font-size-medium);
 }
 
 .profile-details p {
@@ -44,24 +46,32 @@
 .profile-details ul li {
     background-color: var(--secondary-color);
     color: #fff;
-    padding: 10px;
-    margin: 5px 0;
+    padding: var(--spacing-small);
+    margin: var(--spacing-small) 0;
     border-radius: 5px;
 }
 
 .edit-button {
-    padding: 10px 20px;
-    background: var(--secondary-color--);
+    padding: var(--spacing-small) var(--spacing-medium);
+    background: var(--secondary-color);
     color: #fff;
     text-decoration: none;
     border-radius: 10px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.2);
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     font-weight: bold;
-    font-size:16px;
+    font-size: var(--font-size-small);
+    display: inline-block;
+    text-align: center;
 }
 
 .edit-button:hover {
     transform: scale(1.05);
     box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.3);
 }
+
+.profile-name {
+    color: var(--primary-color) !important;
+}
+
+    
