--- a/assets/css/modal-volunteer.css
+++ b/assets/css/modal-volunteer.css
@@ -1,10 +1,17 @@
+.button-container {
+    display: flex;
+    justify-content:center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .volunteer-button  {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background: linear-gradient(90deg, #F99B8F, #E0E382 40%, #53E965 69%, #737FD0);
+    background: linear-gradient(45deg, #2ECC71, #27AE60);
     color: #201f1f;
     font-size: 1em;
     cursor: pointer;
@@ -13,7 +20,7 @@
 
 .volunteer-button:hover {
     transform: scale(1.05);
-    background: #53E965;
+    background: linear-gradient(90deg, #F99B8F, #E0E382 40%, #53E965 69%, #737FD0);
     }
 
 .modal {
@@ -105,7 +112,8 @@ hr{
 }
 
 .unjoin-button {
-    display: inline-block;
+    display: flex;
+    justify-content:center;
     margin-top: 10px;
     padding: 10px 20px;
     border: none;
@@ -128,4 +136,17 @@ p {
 
 .modal-open {
     overflow: hidden; /* Prevent scrolling */
+}
+
+.confirm-unjoin-button {
+    background-color: #dc3545;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.confirm-unjoin-button:hover {
+    background-color: #c82333;
 }
