--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -121,8 +121,8 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #0056b3;
-    transform: scale(1.05);
+    background: linear-gradient(90deg, #F99B8F, #E0E382 40%, #53E965 69%, #737FD0);
+   transform: scale(1.05);
     box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.3);
 }
 
