--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,6 +154,7 @@ body {
 
 .gradient-button:hover {
     transform: scale(1.05);
+    background: linear-gradient(90deg, #F99B8F, #E0E382 40%, #53E965 69%, #737FD0);
     box-shadow: 0px 12px 20px rgba(0, 0, 0, 0.3);
 }
 
