--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -41,7 +41,7 @@ form {
     margin-bottom: 20px;
 }
 
-.form-container p {
+#paragraph{
     max-width: 400px;
     width: 100%;
     text-align: center;
