--- a/assets/css/register-select.css
+++ b/assets/css/register-select.css
@@ -40,6 +40,7 @@
 
 .section i {
     font-size: 100px; 
+    color: 202e3c;
     margin-bottom: 10px;
 }
 
@@ -54,4 +55,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.fas, .fa-solid {
+    color: #202e3c;
 }
