Revert "Merge pull request #6 from agitdev1/matt"
This reverts commit 39a1b00353c8116e8a0293868af0caf8fecd1bf5, reversing
changes made to 5b8a2e2265a2dad34c520a70ae4e61e5f8a17e6d.

--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -41,7 +41,7 @@ form {
     margin-bottom: 20px;
 }
 
-#paragraph{
+.form-container p {
     max-width: 400px;
     width: 100%;
     text-align: center;
