--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,7 +1,12 @@
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+}
+
 .container {
     display: flex;
-    min-height: calc(100vh - 160px);
-    margin-bottom: 0;
 }
 
 .sidebar {
