--- a/assets/css/thank-you.css
+++ b/assets/css/thank-you.css
@@ -1,7 +1,3 @@
-body {
-    display: flex;
-    align-items: center;
-}
 
 .thank-you-message {
     text-align: center;
@@ -10,8 +6,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 500px;
-    margin: 20px;
-    
+    margin: 20px auto; 
 }
 
 .thank-you-message h1 {
@@ -26,14 +21,7 @@ body {
     margin-bottom: 0;
 }
 
-footer {
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-    color: #fff;
-    position: relative;
-    bottom: 0;
-}
+
 @media (max-width: 600px) {
     .thank-you-message {
         padding: 20px;
